      \code{postscript()} and \code{pdf()}.
      
      \item The default \code{postscript(colormodel = "srgb")} now
      changes colorspace less often, so e.g. coloured \code{image()}
      plots may render much faster.

      \item \code{pdf()} in the default sRGB colorspace outputs many
      fewer changes of colorspace, which may speed up rendering in some
      viewing applications.
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Options \code{keep.source = TRUE, figs.only = FALSE}
      are now the default.

      \item The way the type of user-defined options is determined has
      changed.  Previously they were all regarded as logical: now the
      type is determined by the value given at first use.

      \item The allowed values of logical options are now precisely
      those allowed for character inputs to \code{as.logical()}: this
      means that \samp{t} and \samp{f} are no longer allowed (although
      \code{T} and \code{F} still are).

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
      build} will now re-build vignettes in directory \file{vignettes}
      and copy the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.  Further files to be copied to \file{inst/doc}
      can be specified \emph{via} the file
      \file{vignettes/.install_extras}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.

      \item \command{R CMD Sweave} and \command{R CMD Stangle} support
      options \option{--encoding} and \option{--options}.

      \item The \code{Rtangle()} driver allows \code{output = "stdout"}
      or \code{output = "stderr"} to select the output or message
      connection.  This is convenient for scripting using something like