@@ -639,6 +639,13 @@ struct _DevDesc {
     int (*holdflush)();
 #endif
 
+    /* added in 2.14.0, for dev.capabilities.
+       In all cases 0 means NA (unset).
+    */
+    int haveTransparency; /* 1 = none, 2 = bg, 3 = fully, 4 = alpha */
+    int haveRaster; /* 1 = no, 2 = yes, 3 = except for missing values */
+    int haveCapture, haveLocator;  /* 1 = no, 2 = yes */
+
 
     /* Area for future expansion.
        By zeroing this, devices are more likely to work if loaded
