@@ -13,18 +13,17 @@ if(tools:::.OStype() == "windows") {
               Type1FontInUse, CIDFontInUse, R_GD_nullDevice)
 }
 
-export(Hershey, adjustcolor, as.graphicsAnnot, as.raster,
-       blues9, boxplot.stats, check.options, chull,
-       CIDFont, col2rgb, colors, colours, cm, colorRamp,
-       colorRampPalette, contourLines, convertColor, colorConverter,
-       colorspaces, cm.colors, densCols, devAskNewPage, dev.control,
-       dev.copy, dev.copy2eps, dev.copy2pdf, dev.cur,
-       dev.hold, dev.flush, dev.interactive,
-       dev.list, dev.new, dev.next, dev.off, dev.prev, dev.print,
-       dev.set, dev.size, dev2bitmap, deviceIsInteractive, embedFonts,
-       extendrange, getGraphicsEvent, getGraphicsEventEnv,
-       graphics.off, gray, grey,
-       gray.colors, grey.colors, heat.colors, hsv, hcl, is.raster, make.rgb,
+export(Hershey, adjustcolor, as.graphicsAnnot, as.raster, blues9,
+       boxplot.stats, check.options, chull, CIDFont, col2rgb, colors,
+       colours, cm, colorRamp, colorRampPalette, contourLines,
+       convertColor, colorConverter, colorspaces, cm.colors, densCols,
+       devAskNewPage, dev.capabilities, dev.control, dev.copy,
+       dev.copy2eps, dev.copy2pdf, dev.cur, dev.hold, dev.flush,
+       dev.interactive, dev.list, dev.new, dev.next, dev.off,
+       dev.prev, dev.print, dev.set, dev.size, dev2bitmap,
+       deviceIsInteractive, embedFonts, extendrange, getGraphicsEvent,
+       getGraphicsEventEnv, graphics.off, gray, grey, gray.colors,
+       grey.colors, heat.colors, hsv, hcl, is.raster, make.rgb,
        n2mfrow, nclass.Sturges, nclass.FD, nclass.scott, palette, pdf,
        pdf.options, pdfFonts, pictex, postscript, postscriptFont,
        postscriptFonts, ps.options, rainbow, recordGraphics,
